<resources>
    <string name="app_name">BAC</string>
    <string name="action_getElevi">Elevi</string>
    <string name="action_getLicee">Licee</string>
    <string name="action_getProfiluri">Profiluri</string>
    <string name="action_getSpecializari">Specializari</string>
    <string name="action_getDiscipline">Discipline</string>
    <string name="title_activity_get_elevi">getEleviActivity</string>
</resources>
