
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.iuliapopa.bac_androidapp.MainActivity">


    <item
        android:id="@+id/action_getElevi"
        android:orderInCategory="100"
        android:title="@string/action_getElevi"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_getLicee"
        android:orderInCategory="100"
        android:title="@string/action_getLicee"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_getProfiluri"
        android:orderInCategory="100"
        android:title="@string/action_getProfiluri"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_getSpecializari"
        android:orderInCategory="100"
        android:title="@string/action_getSpecializari"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_getDiscipline"
        android:orderInCategory="100"
        android:title="@string/action_getDiscipline"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_search"
        android:orderInCategory="200"
        android:title="Search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        ></item>
    <item
        android:id="@+id/action_user"
        android:orderInCategory="300"
        android:title="User"
        android:icon="@drawable/ic_account_circle"
        app:showAsAction="ifRoom"></item>
</menu>
